-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.6
-
Component/s: Drivers: Filesystems
-
Labels:None
-
Sprint:July 2017
Our current RDBSS doesn't implement reparse support, which means symbolic links are not properly handled when found (like in NFS).
- blocks
-
CORE-11327 Static RDBSS is non-existant
-
- Resolved
-
- relates to
-
CORE-8204 Add nfs client support and pave way for Vagrant
-
- Resolved
-