[0.4.6] - Merge NFS symbolic link fix (r75451) by Pierre CORE-13615

svn path=/branches/ros-branch-0_4_6/; revision=75453